Revision history for JIRA-REST-OAuth

1.01    2019-06-04 - Adam. R. Schobelock <schobes@gmail.com>
        BUGFIX: Forgot to include use base qw(JIRA::REST).

1.00    2019-06-04 - Adam. R. Schobelock <schobes@gmail.com>
        First version, released on an unsuspecting world.
