@@ -1,5 +1,7 @@
 Revision history for JIRA-REST-OAuth
 
+        Updated documentation regarding where to report bugs.
+
 1.01    2019-06-04 - Adam. R. Schobelock <schobes@gmail.com>
         BUGFIX: Forgot to include use base qw(JIRA::REST).
 
